# prompt-optimization-lab

./: README.md  main.py  pyproject.toml  run_baseline_evaluation.py  run_baseline_evaluation_v2.py  run_pipeline_evaluation.py
data/: batch_test_results_20250924_172439.jsonl  golden_dataset_v1.csv  snowflake_metadata.yaml  snowflake_view.json
data/assets/: entity_mapper.json  glossary.json  view_selector_examples.md
data/baseline/: baseline_evaluation_results.json  pipeline_evaluation_results.json
data/baseline_v2/: entity_resolution_stats.json  integrated_baseline_evaluation_results.json
data/optimization_results/: gepa_results.json
data/optimized_modules/: gepa_module.json
data/processed/: data_quality_report.json  training_raw_extracted.csv
notebooks/: 01_data_preparation.ipynb  02_baseline_implementation.ipynb  03_prompt_optimization.ipynb  04_baseline_with_example.ipynb  05_integration_with_MAF.ipynb
src/: data_loader.py  evaluator.py  metrics.py  modules.py  modules_v2.py  optimize_view_selector.py  signatures.py  signatures_v2.py
src/optimizer/: base.py  integrated_text2sql.py  optimize_view_selector.py
test/: questions.csv  questions.txt
